<?xml version="1.0" encoding="utf-8"?>
<!--Nama  : Moch. Star Ramadhan-->
<!--Nim   : 10116482-->
<!--Kelas : AKB/IF - 11-->
<!--Waktu Pengertaan Mulai Tanggal 06/04/2019-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="20"
    android:orientation="vertical"
    android:background="@color/whitetree">

    <LinearLayout
        android:id="@+id/idLayout_page2.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="10">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="45dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp"
            android:text="@string/page2txt1"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:fontFamily="@font/nunito_bold"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="25dp"
            android:text="@string/page2txt2"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:fontFamily="@font/rubik_regular"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_white_btn"
            android:textAllCaps="false"
            android:text="@string/btnKode"
            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>
        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="30dp"-->
            <!--android:paddingTop="18dp"-->
            <!--android:paddingBottom="18dp"-->
            <!--android:layout_marginRight="30dp"-->
            <!--android:background="@drawable/rounded_white_btn"-->
            <!--android:textAllCaps="false"-->
            <!--android:text="@string/btnKode"-->
            <!--android:textSize="16sp"-->
            <!--android:fontFamily="sans-serif"-->
            <!--android:textStyle="bold"-->
            <!--android:onClick="kePage2"/>-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:text="@string/page2txt3"
            android:textAlignment="center"
            android:fontFamily="@font/rubik_regular"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:text="@string/page2txt3_1"
                android:textAlignment="center"
                android:fontFamily="@font/rubik_regular"
                android:textStyle="bold"
                android:paddingRight="2dp"
                android:paddingLeft="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:text="@string/page2txt3_2"
                android:textAlignment="center"
                android:fontFamily="@font/rubik_regular"
                android:paddingRight="2dp"
                android:paddingLeft="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:text="@string/page2txt3_3"
                android:textAlignment="center"
                android:fontFamily="@font/rubik_regular"
                android:textStyle="bold"
                android:paddingRight="2dp"
                android:paddingLeft="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:text="@string/page2txt3_4"
                android:textAlignment="center"
                android:fontFamily="@font/rubik_regular"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_orange_btn"
            android:textAllCaps="false"
            android:text="@string/btnMasuk"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:onClick="kePage3"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white">
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:background="@color/purewhite">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingTop="15dp"
                android:textSize="17sp"
                android:textColorHint="@color/browngrey"
                android:text="@string/page2txt4"
                android:textAlignment="center"
                android:fontFamily="@font/rubik_regular"
                />

            <Button
                android:id="@+id/btn_beli_kode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded_blue_btn"
                android:fontFamily="sans-serif"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:text="@string/btnBeli"
                android:textAllCaps="false"
                android:textColor="@color/purewhite"
                android:textSize="16sp"
                android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>