<?xml version="1.0" encoding="utf-8"?>
<!--Nama  : Moch. Star Ramadhan-->
<!--Nim   : 10116482-->
<!--Kelas : AKB/IF - 11-->
<!--Waktu Pengertaan Mulai Tanggal 06/04/2019-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:weightSum="20"
	android:orientation="vertical"
	android:background="@color/whitetree">

	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="17">

		<ImageView
			android:id="@+id/gbr1"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:adjustViewBounds="true"
			android:contentDescription="@string/contentD"
			android:scaleType="center"
			android:src="@drawable/ic_get_start_timitory" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:layout_centerInParent="true"
			android:text="@string/page1txt"
			android:textColor="@color/black"
			android:textSize="24sp"
			android:textAlignment="center"
			android:fontFamily="sans-serif"
			android:textStyle="bold"
			/>

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="3dp"
		android:background="@color/white">
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:background="@color/purewhite"
		>

		<Button
			android:id="@+id/btn_mulai"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:layout_marginLeft="30dp"
			android:paddingTop="7dp"
			android:paddingBottom="7dp"
			android:layout_marginRight="30dp"
			android:background="@drawable/rounded_orange_btn"
			android:textAllCaps="false"
			android:text="@string/btnMulai"
			android:textSize="16sp"
			android:fontFamily="sans-serif"
			android:textStyle="bold"
			android:onClick="kePage2"/>

	</RelativeLayout>


	</LinearLayout>
